change10 - Dynamic data is done
Whats left - responsive design, building 2 more recipes and changing
resolution of the screen for Apple

--- a/VacuumCookingMethodAarticle.html
+++ b/VacuumCookingMethodAarticle.html
@@ -3,7 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <title>שיטת הבישול בואקום הולכת ותופסת מקום מרכזי בעולם הבישול</title>
+    <script src="includes/jquery-2.1.1.min.js"></script>
     <link rel="stylesheet" href="includes/style.css">
+    <script src="includes/scripts.js"></script>
 </head>
 <body>
 <div id="vaccumWrapper">
@@ -34,10 +36,10 @@
             </ul>
         </nav>
         <div class="clear"></div>
-        <section id="contentArticle">
+        <section class="contentArticle">
             <h2 id="articleHeader">מאמרי מערכת</h2>
             <article id="vaccumAarticleStyle">
-                <h2>שיטת הבישול בואקום הולכת ותופסת מקום מרכזי בעולם הבישול</h2>
+                <h2></h2>
                 <h4 id="vaccumAarticleStyleH4">9 בדצמבר 2010</h4>
                 <p id="vaccumAarticleStyleParaBold">בישול בואקום היא טכניקת בישול ייחודית,שמעשירה את החוויה הקולינרית שלנו במרקמים, בטעמים ובצבעים הטבעיים של מוצרי המזון השונים בדרכים שכמעט אי אפשר לקבל בשיטות הבישול הקלאסיות.</p>
                 <p id="vaccumAarticleStyleParaNotBoldFix">השיטה פשוטה לביצוע. בשלב הראשון נאטם המזון בשקית ואקום ייעודית ובשלב השני מונחת השקית באמבט עם נוזל, שהטמפרטורה שלו נשמרת ומבוקרת בדיוק רב.</p>
