--- a/systemArticles.html
+++ b/systemArticles.html
@@ -32,7 +32,7 @@
             </ul>
         </nav>
         <div class="clear"></div>
-        <section id="contentArticle">
+        <section class="contentArticle">
             <h2 id="articleHeader">מאמרי מערכת</h2>
             <article id="articleContentStyle1">
                 <img id="articleContentStyle1Img" class="contentPicture" src="images/systemArticlePic1.jpg">
