--- a/vodkaWatermellon.html
+++ b/vodkaWatermellon.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <title>שאט וודקה אבטיח</title>
-    <link rel="stylesheet" href="includes/style.css">
     <script src="includes/jquery-2.1.1.min.js"></script>
     <script src="includes/scripts.js"></script>
+    <link rel="stylesheet" href="includes/style.css">
 </head>
 
 <body>
-<div id="vodkaWatermellonWrapper">
+<div class="recipesWrapper">
     <header>
         <a href="index.html" id="logo"></a>
     </header>
@@ -26,7 +26,7 @@
         </ul>
     </nav>
     <div class="clear"></div>
-    <main id="contentMainRecipesArticle">
+    <main class="contentMainRecipesArticle">
         <nav id="mainNav">
             <ul id="mainNavVMHover">
                 <li><a href="index.html">עמוד הבית</a></li>
@@ -37,19 +37,14 @@
             </ul>
         </nav>
         <div class="clear"></div>
-        <section id="contentArticle">
+        <section class="contentArticle">
             <h2 id="articleHeader">מתכונים</h2>
-            <article id="vodkaWMAarticleStyle">
-                <h1>שאט וודקה ואבטיח</h1>
-                <img src="images/vodkaWatermellon.jpg" id="vodkaWatermellonImg">
-                <p id="vodkaWMAarticleStylePara">שאט וודקה אבטיח הוא משקה מושלם לערב שרבי. הוודקה תתן לכם את מלוא כובד האלהוכהול, והאבטיח עם המנטה את הקלילות של הקיץ. לחיים!</p>
-                <section id="vodkaWMAarticleStyleRecipes">
+            <article class="articleStyle">
+                <h1></h1>
+                <img class="articleImgStyle">
+                <p class="articleStylePara"></p>
+                <section class="articleStyleRecipes">
                     <p>החומרים</p>
-                    <p> 100 גרם סוכר</p>
-                    <p>600 גרם אבטיח חתוך לקוביות קפואות</p>
-                    <p>100 גרם מיץ לימון</p>
-                    <p>100 גרם מים</p>
-                    <p>330 גרם וודקה</p>
                 </section>
 
                 <section id="vodkaWMAarticleStylePreparation">
@@ -99,9 +94,9 @@
             <ul id="ulLastChild">
                 <li class="orange">מתכונים לתרמומיקס</li>
                 <ul id="ulInnerRecipesTermo">
-                    <li><a href="#"> אורז מלא בלימון ועשבי תיבול</a></li>
+                    <li><a href="fullRiceRecipe.html"> אורז מלא בלימון ועשבי תיבול</a></li>
                     <li><a href="vodkaWatermellon.html" class="orange">שאט של וודקה אבטיח</a></li>
-                    <li><a href="#">קפה קר ללא לקטוז</a></li>
+                    <li><a href="coldCoffe.html">קפה קר ללא לקטוז</a></li>
                     <li><a href="#">דואט קנולי</a></li>
                     <li><a href="#">גלילי ביסקוויט שוקולוד</a></li>
                     <li><a href="#">בצק שמרים ללא גלוטן</a></li>
