--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     </nav>
     <div class="clear"></div>
     <main>
-          <marquee id="tickerText">זה טקסט הטיקר. הטיקר מופיע      כאן בעמוד הבית בלבד, ויש בו תוכן אודות חידושים, אירועים</marquee>
+        <marquee id="tickerText">זה טקסט הטיקר. הטיקר מופיע      כאן בעמוד הבית בלבד, ויש בו תוכן אודות חידושים, אירועים</marquee>
         <section id="slideshow">
             <section id="slideshowinner">
                 <section id="slideshowimg"><img src="images/slideshowimg.jpg"></section>
@@ -57,7 +57,7 @@
                 <p class="systemArticleCotert">שיטת הבישול בואקום הולכת ותופסת מקום מרכזי בעולם הבישול</p>
                 <p class="systemArticleDate">27 באוקטובר 2010</p>
                 <p class="systemArticleText">טקסט התוכן של המאמר הראשון. בטקסט המקוצר המופיע בעמוד הבית יוצגו תמיד ארבעת השורות...</p>
-                <p class="articleLink al1"><a href="#"> למאמר המלא </a><img class="arrow" src="images/greenArrow.png"></p>
+                <p class="articleLink al1"><a href="vacuumCookingMethodAarticle.html"> למאמר המלא </a><img class="arrow" src="images/greenArrow.png"></p>
 
             </article>
             <article class="systemArticle">
