--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>FienCook</title>
     <link rel="stylesheet" href="includes/style.css">
+    <script src="includes/slider.js"></script>
 </head>
 <body>
 <div id="wrapper">
@@ -27,7 +28,34 @@
         <marquee id="tickerText">זה טקסט הטיקר. הטיקר מופיע      כאן בעמוד הבית בלבד, ויש בו תוכן אודות חידושים, אירועים</marquee>
         <section id="slideshow">
             <section id="slideshowinner">
-                <section id="slideshowimg"><img src="images/slideshowimg.jpg"></section>
+
+                <section class="mask">
+                    <ul class="images">
+                        <li>
+                            <img width="341" src="images/slideshowimg.jpgg" />
+                        </li>
+                        <li>
+                            <img width="341" src="images/slideshowimg.jpg" />
+                        </li>
+                        <li>
+                            <img width="341" src="images/slideshowimg.jpg" />
+                        </li>
+                        <li>
+                            <img width="341" src="images/slideshowimg.jpg" />
+                        </li>
+                        <li>
+                            <img width="341" src="images/slideshowimg.jpg" />
+                        </li>
+                    </ul>
+                </section>
+
+                <ul class="triggers">
+                    <li>•</li>
+                    <li>•</li>
+                    <li>•</li>
+                    <li>•</li>
+                    <li>•</li>
+                </ul>
                 <section id="slideshowtext">
                     <h1 id="h1slideshow">פתרונות חכמים למטבח המודרני</h1>
                     <p>אנחנו ב-FEIN COOK מאתרים מכונות מזון וציוד עזר למטבח הביתי והמקצועי מרחבי העולם. בוחרים את המכשירים המתקדמים בעולם באיכותם הגבוהה ובחדשנותם אשר משפרים את המקצוענות, מייעלים תהליכי עבודה וחוסכים זמן וכסף, תוך שאנחנו שמים דגש על האיכות הקולינרית של המנות.</p>
