--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 <section class="mask">
                     <ul class="images">
                         <li>
-                            <img width="341" src="images/slideshowimg.jpgg" />
+                            <img width="341" src="images/slideshowimg.jpg" />
                         </li>
                         <li>
                             <img width="341" src="images/slideshowimg.jpg" />
