--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>FienCook</title>
     <link rel="stylesheet" href="includes/style.css">
+    <script src="includes/jquery-2.1.1.min.js"></script>
     <script src="includes/slider.js"></script>
 </head>
 <body>
