--- a/index.html
+++ b/index.html
@@ -49,7 +49,8 @@
                         </li>
                     </ul>
                 </section>
-
+                <span class="control prev">Prev</span>
+                <span class="control next">Next</span>
                 <ul class="triggers">
                     <li>•</li>
                     <li>•</li>
