--- a/index.html
+++ b/index.html
@@ -33,19 +33,19 @@
                 <section class="mask">
                     <ul class="images">
                         <li>
-                            <img width="341" src="images/slideshowimg.jpg" />
+                            <img src="images/slideshowimg.jpg">
                         </li>
                         <li>
-                            <img width="341" src="images/slideshowimg.jpg" />
+                            <img src="images/slideshowimg.jpg">
                         </li>
                         <li>
-                            <img width="341" src="images/slideshowimg.jpg" />
+                            <img src="images/slideshowimg.jpg">
                         </li>
                         <li>
-                            <img width="341" src="images/slideshowimg.jpg" />
+                            <img src="images/slideshowimg.jpg">
                         </li>
                         <li>
-                            <img width="341" src="images/slideshowimg.jpg" />
+                            <img src="images/slideshowimg.jpg">
                         </li>
                     </ul>
                 </section>
