--- a/index.html
+++ b/index.html
@@ -32,29 +32,19 @@
 
                 <section class="mask">
                     <ul class="images">
-                        <li>
-                            <img src="images/slideshowimg.jpg">
-                        </li>
-                        <li>
-                            <img src="images/slideshowimg.jpg">
-                        </li>
-                        <li>
-                            <img src="images/slideshowimg.jpg">
-                        </li>
-                        <li>
-                            <img src="images/slideshowimg.jpg">
-                        </li>
-                        <li>
-                            <img src="images/slideshowimg.jpg">
-                        </li>
+                        <li><img src="images/slideshowimg.jpg"></li>
+                        <li><img src="images/slideshowimg.jpg"></li>
+                        <li><img src="images/slideshowimg.jpg"></li>
+                        <li><img src="images/slideshowimg.jpg"></li>
+                        <li><img src="images/slideshowimg.jpg"></li>
                     </ul>
                 </section>
                 <ul class="triggers">
-                    <li>1</li>
-                    <li>2</li>
-                    <li>3</li>
-                    <li>4</li>
-                    <li>5</li>
+                    <li>•</li>
+                    <li>•</li>
+                    <li>•</li>
+                    <li>•</li>
+                    <li>•</li>
                 </ul>
                 <section id="slideshowtext">
                     <h1 id="h1slideshow">פתרונות חכמים למטבח המודרני</h1>
