--- a/vacuumCookingMethodArticle.html
+++ b/vacuumCookingMethodArticle.html
@@ -42,20 +42,20 @@
                 <h2></h2>
                 <h4 id="vaccumAarticleStyleH4">9 בדצמבר 2010</h4>
                 <p id="vaccumAarticleStyleParaBold">בישול בואקום היא טכניקת בישול ייחודית,שמעשירה את החוויה הקולינרית שלנו במרקמים, בטעמים ובצבעים הטבעיים של מוצרי המזון השונים בדרכים שכמעט אי אפשר לקבל בשיטות הבישול הקלאסיות.</p>
-                <p id="vaccumAarticleStyleParaNotBoldFix">השיטה פשוטה לביצוע. בשלב הראשון נאטם המזון בשקית ואקום ייעודית ובשלב השני מונחת השקית באמבט עם נוזל, שהטמפרטורה שלו נשמרת ומבוקרת בדיוק רב.</p>
-                <section class="vaccumAarticleStyleParaSection">
+                <p>השיטה פשוטה לביצוע. בשלב הראשון נאטם המזון בשקית ואקום ייעודית ובשלב השני מונחת השקית באמבט עם נוזל, שהטמפרטורה שלו נשמרת ומבוקרת בדיוק רב.</p>
+
                     <p>בבישול בואקום מתבשל המזון זמנים ארוכים בטמפרטורות נמוכות. שילוב נכון בין טמפרטורת הבישול לבין זמן הבישול מבטיח תוצאות אופטימליות</p>
                     <p>התוצאות בבישול בואקום מדהימות. בשרים, עופות, דכים, פירות, ירקות ומוצרים נוספים מתקבלים כולם רכים, עסיסיים, ברמת עשייה מדוייקת ובצבעוניות מרשימה. גם מנתח כתף יתקבלו סטייקים עסיסיים.</p>
                     <p>בישול בואקום מציע יתרונות רבים בכול הקשור לארגון העבודה במטבח, במסעדה ובחברות קייטרינג. השיטה מאפשרת לבשל מנות מרהיבות בישול מוקדם ורק לסיים את הכנת המנה בזמן ההגשה. ניתן להכין סמוך להגשה במהירות, בדייקנות ובאחידות, מנות המחייבות בישול ממושך.</p>
                     <p>בנוסף, הניצולת של השיטה, היעילות בתכנון המלאי והשליטה באופן ההכנה, מצמצמות את הפחת ואת עלויות המזון</p>
                     <p>על מנת לגלות את העולם המופלא של הבישול בואקום ניתן להיעזר בספר הבישול של השף הענק תומס קלר Under Pressure ובספרם של חואן רוקה וסלבדור בורגוס Sous-Vide Cuisine, הניתנים גם הם לרכישה אצלנו בפיינקוק.</p>
-                    <article id="vaccumAarticleStyleNextBeforeArticle">
-                        <p id="vaccumAarticleStyleNextBeforeArticleBefore"><a href="#"> למאמר הקודם</a></p>
+                    <section id="vaccumAarticleStyleNextBeforeArticle">
+                        <section id="vaccumAarticleStyleNextBeforeArticleBefore"><a href="#"> למאמר הקודם</a></section>
                         <img src="images/greenArrowOppo.png" id="greenArrowImgArticleBefore">
-                        <p id="vaccumAarticleStyleNextBeforeArticleAfter"><a href="#"> למאמר הבא</a></p>
+                        <section id="vaccumAarticleStyleNextBeforeArticleAfter"><a href="#"> למאמר הבא</a></section>
                         <img src="images/greenArrow.png" id="greenArrowImgArticleAfter">
-                    </article>
-                </section>
+                    </section>
+
             </article>
 
         </section>
