--- a/coldCoffe.html
+++ b/coldCoffe.html
@@ -42,9 +42,9 @@
             <article class="articleStyle">
                 <h1></h1>
                 <img class="articleImgStyle">
-                <p class="articleStylePara"></p>
+                <p class="articleStyleBoldPara"></p>
                 <section class="articleStyleRecipes">
-                    <p>החומרים</p>
+                    <p class="articleStyleBoldPara">החומרים</p>
                 </section>
 
                 <section id="vodkaWMAarticleStylePreparation">
@@ -64,7 +64,7 @@
                     <img src="images/picsSlider.jpg" id="picsSliderBigImg">
                     <p>הצעת הגשה: מעל עלים טריים.</p>
                 </section>
-            </article>
+
             <section id="sendRecipes">
                 <p>שלח לנו מתכון!</p>
                 <ul>
@@ -76,7 +76,9 @@
                 </ul>
             </section>
             <div class="clear"></div>
+            </article>
         </section>
+
     </main>
     <aside id="vodkaWatermellonaside">
         <section id="asideSearch">
