--- a/coldCoffe.html
+++ b/coldCoffe.html
@@ -48,7 +48,7 @@
                 </section>
 
                 <section id="vodkaWMAarticleStylePreparation">
-                    <p>אופן ההכנה</p>
+                    <p class="articleStyleBoldPara">אופן ההכנה</p>
                     <p>1. שוקלים את הסוכר ישירות לקערת התרמומיקס וטוחנים 10 שניות במהירות 10</p>
                     <p>2. מוסיפים את קוביות האבטיח הקפואות וקוצצים 30 שניות במהירות 10</p>
                     <p>3. מוסיפים את מיץ הלימון, המים והוודקה ומערבבים 30 שניות במהירות 6</p>
