--- a/vodkaWatermellon.html
+++ b/vodkaWatermellon.html
@@ -47,7 +47,7 @@
                     <p class="articleStyleBoldPara">החומרים</p>
                 </section>
 
-                <section id="vodkaWMAarticleStylePreparation">
+                <section>
                     <p class="articleStyleBoldPara">אופן ההכנה</p>
                     <p>1. שוקלים את הסוכר ישירות לקערת התרמומיקס וטוחנים 10 שניות במהירות 10</p>
                     <p>2. מוסיפים את קוביות האבטיח הקפואות וקוצצים 30 שניות במהירות 10</p>
