--- a/conatctForm.html
+++ b/conatctForm.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>צרו קשר</title>
-    <link rel="stylesheet" href="includes/style.css">
+    <link rel="stylesheet" href="includes/style.css"  media="print">
 </head>
 <body>
 <div id="contactFormWrapper">
