--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>FienCook</title>
-    <link rel="stylesheet" href="includes/style.css">
+    <link rel="stylesheet" href="includes/style.css"  media="print">
     <script src="includes/jquery-2.1.1.min.js"></script>
     <script src="includes/slider.js"></script>
 </head>
