--- a/recipes.html
+++ b/recipes.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>מתכונים</title>
-    <link rel="stylesheet" href="includes/style.css">
+    <link rel="stylesheet" href="includes/style.css" media="print">
 </head>
 <body>
 <div id="recipesWrapper">
