--- a/systemArticles.html
+++ b/systemArticles.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>מאמרי מערכת</title>
-    <link rel="stylesheet" href="includes/style.css">
+    <link rel="stylesheet" href="includes/style.css" media="print">
 </head>
 <body>
 <div id="contentWrapper">
