--- a/vacuumCookingMethodArticle.html
+++ b/vacuumCookingMethodArticle.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>שיטת הבישול בואקום הולכת ותופסת מקום מרכזי בעולם הבישול</title>
     <script src="includes/jquery-2.1.1.min.js"></script>
-    <link rel="stylesheet" href="includes/style.css">
+    <link rel="stylesheet" href="includes/style.css" media="print">
     <script src="includes/scripts.js"></script>
 </head>
 <body>
