--- a/vodkaWatermellon.html
+++ b/vodkaWatermellon.html
@@ -5,7 +5,7 @@
     <title>שאט וודקה אבטיח</title>
     <script src="includes/jquery-2.1.1.min.js"></script>
     <script src="includes/scripts.js"></script>
-    <link rel="stylesheet" href="includes/style.css">
+    <link rel="stylesheet" href="includes/style.css"  media="print">
 </head>
 
 <body>
