--- a/coldCoffe.html
+++ b/coldCoffe.html
@@ -5,7 +5,7 @@
     <title>קפה קר ללא לקטוז</title>
     <script src="includes/jquery-2.1.1.min.js"></script>
     <script src="includes/scripts.js"></script>
-    <link rel="stylesheet" href="includes/style.css"  media="print">
+    <link rel="stylesheet" href="includes/style.css">
 </head>
 
 <body>
