--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                 <p class="systemArticleText">טקסט התוכן של המאמר השני. גם כאן מוצגות רק ארבעת השורות הראשונות של המאמר והתוכן ייקטע...</p>
                 <p class="articleLink al1"><a href="#">למאמר המלא </a><img class="arrow" src="images/greenArrow.png"></p>
             </article>
-            <section id="endArticle"></section>
+            <section id="endArticle" class="endArticle"></section>
         </section>
         <section id="contentWorld">
             <h3 class="h3contentWorld">עולמות תוכן</h3>
