--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width,initial-scale=1">
     <title>FienCook</title>
     <link rel="stylesheet" href="includes/style.css">
     <script src="includes/jquery-2.1.1.min.js"></script>
