--- a/index.html
+++ b/index.html
@@ -12,6 +12,21 @@
 <div id="wrapper">
     <header>
         <a href="index.html" id="logo"></a>
+
+
+        <section id='cssmenu'>
+            <ul>
+                <li class='has-sub'><a href='#'><span>Products</span></a>
+                    <ul>
+                        <li><a href='#'><span>Product 1</span></a></li>
+                        <li class='last'><a href='#'><span>Product 2</span></a></li>
+                    </ul>
+                </li>
+                <li class='last'><a href='#'><span>Contact</span></a></li>
+            </ul>
+        </section>
+
+
     </header>
     <nav id="topNav">
         <ul>
