--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <nav class="topNav">
             <ul class="clearfix">
                 <li>
-                    <a href="#">עוד <span class="arrow">&#9660;</span></a>
+                    <a href="#" id="openSmenu">עוד <span class="arrow">&#9660;</span></a>
 
                     <ul class="sub-menu">
                         <li><a href="#">שאלות ותשובות</a></li>
