--- a/vodkaWatermellon.html
+++ b/vodkaWatermellon.html
@@ -61,7 +61,7 @@
                         <li><img src="images/rightBrownArrow.jpg"></li>
                         <li><img src="images/leftBrownArrow.jpg"></li>
                     </ul>
-                    <img src="images/picsSlider.jpg" id="picsSliderBigImg">
+                    <img src="images/picsSlider.jpg" class="picsSliderBigImg">
                     <p>הצעת הגשה: מעל עלים טריים.</p>
                 </section>
 
