--- a/fullRiceRecipe.html
+++ b/fullRiceRecipe.html
@@ -71,7 +71,7 @@
                             <li><img src="images/picsSlider.jpg" class="picsSliderBigImg"></li>
                         </ul>
                     </section>
-
+                    <div class="clear"></div>
                     <p>הצעת הגשה: מעל עלים טריים.</p>
                 </section>
 
