--- a/fullRiceRecipe.html
+++ b/fullRiceRecipe.html
@@ -71,6 +71,13 @@
                             <li><img src="images/picsSlider.jpg" class="picsSliderBigImg"></li>
                         </ul>
                     </section>
+                    <ul class="triggers recipeTrigger">
+                        <li>•</li>
+                        <li>•</li>
+                        <li>•</li>
+                        <li>•</li>
+                        <li>•</li>
+                    </ul>
                     <div class="clear"></div>
                     <p>הצעת הגשה: מעל עלים טריים.</p>
                 </section>
