--- a/fullRiceRecipe.html
+++ b/fullRiceRecipe.html
@@ -62,8 +62,8 @@
                         <li><span class="control prev"><img src="images/rightBrownArrow.jpg"></span></li>
                         <li><span class="control next"><img src="images/leftBrownArrow.jpg"></span></li>
                     </ul>
-                    <section class="mask">
-                        <ul class="images">
+                    <section class="maskRecipe">
+                        <ul class="imagesRecipe">
                             <li><img src="images/picsSlider.jpg" class="picsSliderBigImg"></li>
                             <li><img src="images/picsSlider.jpg" class="picsSliderBigImg"></li>
                             <li><img src="images/picsSlider.jpg" class="picsSliderBigImg"></li>
