--- a/fullRiceRecipe.html
+++ b/fullRiceRecipe.html
@@ -57,8 +57,12 @@
                 </section>
 
                 <section id="picsSlider">
-                    <ul>
-                        <li>2/6 דפדפו בין התמונות</li>
+                    <ul class="triggers recipeTrigger">
+                        <li>5\1 דפדפו בין התמונות</li>
+                        <li>5\2 דפדפו בין התמונות</li>
+                        <li>5\3 דפדפו בין התמונות</li>
+                        <li>5\4 דפדפו בין התמונות</li>
+                        <li>5\5דפדפו בין התמונות</li>
                         </ul>
                     <ul>
                         <li><span class="control prev"><img src="images/rightBrownArrow.jpg"></span></li>
@@ -73,13 +77,7 @@
                             <li><img src="images/picsSlider.jpg" class="picsSliderBigImg"></li>
                         </ul>
                     </section>
-                    <ul class="triggers recipeTrigger">
-                        <li>•</li>
-                        <li>•</li>
-                        <li>•</li>
-                        <li>•</li>
-                        <li>•</li>
-                    </ul>
+
                     <div class="clear"></div>
                     <p>הצעת הגשה: מעל עלים טריים.</p>
                 </section>
