--- a/fullRiceRecipe.html
+++ b/fullRiceRecipe.html
@@ -57,7 +57,7 @@
                 </section>
 
                 <section id="picsSlider">
-                    <ul class="triggers recipeTrigger">
+                    <ul class="recipeTrigger">
                         <li>5\1 דפדפו בין התמונות</li>
                         <li>5\2 דפדפו בין התמונות</li>
                         <li>5\3 דפדפו בין התמונות</li>
