--- a/vodkaWatermellon.html
+++ b/vodkaWatermellon.html
@@ -5,6 +5,7 @@
     <title>שאט וודקה אבטיח</title>
     <script src="includes/jquery-2.1.1.min.js"></script>
     <script src="includes/scripts.js"></script>
+    <script src="includes/recipeSlider.js"></script>
     <link rel="stylesheet" href="includes/style.css">
 </head>
 
@@ -56,12 +57,28 @@
                 </section>
 
                 <section id="picsSlider">
-                    <ul>
-                        <li>2/6 דפדפו בין התמונות</li>
-                        <li><img src="images/rightBrownArrow.jpg"></li>
-                        <li><img src="images/leftBrownArrow.jpg"></li>
+                    <ul class="recipeTrigger">
+                        <li>5\1 דפדפו בין התמונות</li>
+                        <li>5\2 דפדפו בין התמונות</li>
+                        <li>5\3 דפדפו בין התמונות</li>
+                        <li>5\4 דפדפו בין התמונות</li>
+                        <li>5\5 דפדפו בין התמונות</li>
                     </ul>
-                    <img src="images/picsSlider.jpg" class="picsSliderBigImg">
+                    <ul>
+                        <li><span class="control prev"><img src="images/rightBrownArrow.jpg"></span></li>
+                        <li><span class="control next"><img src="images/leftBrownArrow.jpg"></span></li>
+                    </ul>
+                    <section class="maskRecipe">
+                        <ul class="imagesRecipe">
+                            <li><img src="images/picsSlider.jpg" class="picsSliderBigImg"></li>
+                            <li><img src="images/picsSlider.jpg" class="picsSliderBigImg"></li>
+                            <li><img src="images/picsSlider.jpg" class="picsSliderBigImg"></li>
+                            <li><img src="images/picsSlider.jpg" class="picsSliderBigImg"></li>
+                            <li><img src="images/picsSlider.jpg" class="picsSliderBigImg"></li>
+                        </ul>
+                    </section>
+
+                    <div class="clear"></div>
                     <p>הצעת הגשה: מעל עלים טריים.</p>
                 </section>
 
