--- a/conatctForm.html
+++ b/conatctForm.html
@@ -42,7 +42,7 @@
                         <p>כתובת אי-מייל*</p><input type="text" class="formField">
                         <p>נושא ההודעה</p><input type="text" class="formField">
                         <p>ההודעה*</p><input type="text" id="formMsgField">
-                        <img src="images/CBfield.png" id="CKstyle"><p>שלחו "ניוזלטר פיין קוק" למייל שלי</p>
+                        <input type="checkbox" id="CKstyle"><p>שלחו "ניוזלטר פיין קוק" למייל שלי</p>
                         <input type="submit" value="שלח"  id="submitForm">
                     </form>
             </section>
