--- a/systemArticles.html
+++ b/systemArticles.html
@@ -13,11 +13,11 @@
     <nav id="topNav">
         <ul>
             <li><a href="#">שאלות ותשובות</a></li>
-            <li class="navBorder"><a href="#">צרו קשר</a></li>
+            <li class="navBorder"><a href="conatctForm.html">צרו קשר</a></li>
             <li class="navBorder"><a href="#">כתבו עלינו</a></li>
             <li class="navBorder"><a href="#">בלוג</a></li>
             <li class="navBorder"><a href="#">פורום</a></li>
-            <li class="navBorder"><a href="#">בית פין קוק</a></li>
+            <li class="navBorder"><a href="fiencookHouse.html">בית פין קוק</a></li>
             <li class="navBorder"><a href="#">יאיר פיינברג</a></li>
             <li class="navBorder"><a href="index.html">עמוד הבית</a></li>
         </ul>
