fiencook slider take 1

--- a/fiencookHouse.html
+++ b/fiencookHouse.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>בית פיין-קוק</title>
     <link rel="stylesheet" href="includes/style.css">
+    <script src="includes/fiencookHomeSlider.js"></script>
 </head>
 <body>
 <div id="fiencookWrapper">
@@ -38,12 +39,27 @@
             <h1>בית פיין קוק</h1>
             <section id="fiencookArticleFirstSection">אזור המטבח הפך עם השנים למרכז יצירה קולינרית. המטבח הוא כמו הסטודיו של השף, ממנו הוא מפיק את יצירותיו וחולק אותן כחוויה אומנותית. תפיסה זו מביאה את FEIN-CUISINE לחרוט על דגלה מקצוענות כמטרת על ולהפוך כל פרויקט ליצירתי וייחודי.</section>
             <section id="fiencookArticleSlideshow">
-                <ul>
-                    <li>1/8 דפדפו בין התמונות</li>
-                    <li><a href="#"><img src="images/rightBrownArrow.jpg"></a></li>
-                    <li><a href="#"><img src="images/leftBrownArrow.jpg"></a></li>
-                </ul>
-                <img src="images/fiencookImg.jpg" id="fiencookArticleSlideshowImg">
+
+                    <ul class="fienHomeTrigger">
+                        <li>5\1 דפדפו בין התמונות</li>
+                        <li>5\2 דפדפו בין התמונות</li>
+                        <li>5\3 דפדפו בין התמונות</li>
+                        <li>5\4 דפדפו בין התמונות</li>
+                        <li>5\5 דפדפו בין התמונות</li>
+                    </ul>
+                    <ul>
+                        <li><span class="control prev"><img src="images/rightBrownArrow.jpg"></span></li>
+                        <li><span class="control next"><img src="images/leftBrownArrow.jpg"></span></li>
+                    </ul>
+                    <section class="maskFienHome">
+                        <ul class="imagesFienHome">
+                            <li><img src="images/fiencookImg.jpg" class="fiencookArticleSlideshowImg"></li>
+                            <li><img src="images/fiencookImg.jpg" class="fiencookArticleSlideshowImg"></li>
+                            <li><img src="images/fiencookImg.jpg" class="fiencookArticleSlideshowImg"></li>
+                            <li><img src="images/fiencookImg.jpg" class="fiencookArticleSlideshowImg"></li>
+                            <li><img src="images/fiencookImg.jpg" class="fiencookArticleSlideshowImg"></li>
+                        </ul>
+                    </section>
                 <p>מחלקת התבלינים בבית פיין קוק החדש</p>
             </section>
             <section id="fiencookArticlePara">
