--- a/fiencookHouse.html
+++ b/fiencookHouse.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>בית פיין-קוק</title>
+    <script src="includes/jquery-2.1.1.min.js"></script>
     <link rel="stylesheet" href="includes/style.css">
     <script src="includes/fiencookHomeSlider.js"></script>
 </head>
@@ -59,6 +60,7 @@
                             <li><img src="images/fiencookImg.jpg" class="fiencookArticleSlideshowImg"></li>
                             <li><img src="images/fiencookImg.jpg" class="fiencookArticleSlideshowImg"></li>
                         </ul>
+                        <div class="clear"></div>
                     </section>
                 <p>מחלקת התבלינים בבית פיין קוק החדש</p>
             </section>
