--- a/index.html
+++ b/index.html
@@ -19,7 +19,6 @@
             <ul class="clearfix">
                 <li>
                     <a href="#" id="openSmenu">עוד <span class="arrow">&#9660;</span></a>
-
                     <ul class="sub-menu">
                         <li><a href="#">שאלות ותשובות</a></li>
                         <li><a href="conatctForm.html">צרו קשר</a></li>
@@ -51,7 +50,6 @@
         <marquee id="tickerText">זה טקסט הטיקר. הטיקר מופיע      כאן בעמוד הבית בלבד, ויש בו תוכן אודות חידושים, אירועים</marquee>
         <section id="slideshow">
             <section id="slideshowinner">
-
                 <section class="mask">
                     <ul class="images">
                         <li><img src="images/slideshowimg.jpg"></li>
@@ -112,15 +110,15 @@
         <section id="contentWorld">
             <h3 class="h3contentWorld">עולמות תוכן</h3>
             <section id="contentPic1">
-                <img class="contentPic" src="images/contpic1.jpg">
+                <a href="vodkaWatermellon.html"><img class="contentPic" src="images/contpic1.jpg"></a>
                 <p class="contentLinks">התרמומיקס</p>
             </section>
             <section id="contentPic2">
-                <img class="contentPic" src="images/contpic2.jpg">
+                <a href="#"><img class="contentPic" src="images/contpic2.jpg"></a>
                 <p class="contentLinks">בישול בואקום</p>
             </section>
             <section id="contentPic3">
-                <img class="contentPic" src="images/contpic3.jpg">
+                <a href="#"><img class="contentPic" src="images/contpic3.jpg"></a>
                 <p class="contentLinks">פאקו-ג'ט</p>
             </section>
             <section id="endContent"></section>
