--- a/fullRiceRecipe.html
+++ b/fullRiceRecipe.html
@@ -34,7 +34,7 @@
                 <li><img src="images/brownArrow.png" class="brownArrowImg"></li>
                 <li><a href="recipes.html">מתכונים</a></li>
                 <li><img src="images/orangeArrow1.png" class="brownArrowImg"></li>
-                <li><a href="fullRiceRecipe.html" class="orangeRecipesLogo">אורז מלא בלימון ועשבי תיבול</a></li>
+                <li><a href="fullRiceRecipe.html" id="orangeRecipesLogo">אורז מלא בלימון ועשבי תיבול</a></li>
             </ul>
         </nav>
         <div class="clear"></div>
