--- a/vodkaWatermellon.html
+++ b/vodkaWatermellon.html
@@ -34,7 +34,7 @@
                 <li><img src="images/brownArrow.png" class="brownArrowImg"></li>
                 <li><a href="recipes.html">מתכונים</a></li>
                 <li><img src="images/orangeArrow1.png" class="brownArrowImg"></li>
-                <li><a href="vodkaWatermellon.html" class="orangeRecipesLogo">שאט וודקה אבטיח</a></li>
+                <li><a href="vodkaWatermellon.html" id="orangeRecipesLogo">שאט וודקה אבטיח</a></li>
             </ul>
         </nav>
         <div class="clear"></div>
