--- a/coldCoffe.html
+++ b/coldCoffe.html
@@ -34,7 +34,7 @@
                 <li><img src="images/brownArrow.png" class="brownArrowImg"></li>
                 <li><a href="recipes.html">מתכונים</a></li>
                 <li><img src="images/orangeArrow1.png" class="brownArrowImg"></li>
-                <li><a href="fullRiceRecipe.html" class="orangeRecipesLogo">קפה קר ללא לקטוז</a></li>
+                <li><a href="fullRiceRecipe.html" id="orangeRecipesLogo">קפה קר ללא לקטוז</a></li>
             </ul>
         </nav>
         <div class="clear"></div>
