--- a/recipes.html
+++ b/recipes.html
@@ -28,7 +28,7 @@
             <ul>
                 <li id="orangeHover"><a href="index.html">עמוד הבית</a></li>
                 <li><img src="images/orangeArrow1.png" class="brownArrowImg"></li>
-                <li><a href="recipes.html" class="orangeRecipesLogo">מתכונים</a></li>
+                <li><a href="recipes.html" id="orangeRecipesLogo">מתכונים</a></li>
             </ul>
         </nav>
         <div class="clear"></div>
