--- a/recipes.html
+++ b/recipes.html
@@ -24,7 +24,7 @@
     </nav>
     <div class="clear"></div>
     <main id="contentMainRecipesArticle">
-        <nav id="mainNav">
+        <nav class="mainNav">
             <ul>
                 <li id="orangeHover"><a href="index.html">עמוד הבית</a></li>
                 <li><img src="images/orangeArrow1.png" class="brownArrowImg"></li>
