--- a/systemArticles.html
+++ b/systemArticles.html
@@ -24,7 +24,7 @@
     </nav>
     <div class="clear"></div>
     <main id="contentMain">
-        <nav id="mainNav">
+        <nav class="mainNav">
             <ul>
                 <li><a href="index.html">עמוד הבית</a></li>
                 <li><img src="images/greenArrow1.png" id="greenArrowImg"></li>
