--- a/vacuumCookingMethodArticle.html
+++ b/vacuumCookingMethodArticle.html
@@ -26,7 +26,7 @@
     </nav>
     <div class="clear"></div>
     <main id="contentMainVaccumArticle">
-        <nav id="mainNav">
+        <nav class="mainNav">
             <ul>
                 <li><a href="index.html">עמוד הבית</a></li>
                 <li><img src="images/brownArrow.png" class="brownArrowImg"></li>
