--- a/vodkaWatermellon.html
+++ b/vodkaWatermellon.html
@@ -28,7 +28,7 @@
     </nav>
     <div class="clear"></div>
     <main class="contentMainRecipesArticle">
-        <nav id="mainNav">
+        <nav class="mainNav">
             <ul id="mainNavVMHover">
                 <li><a href="index.html">עמוד הבית</a></li>
                 <li><img src="images/brownArrow.png" class="brownArrowImg"></li>
