fix topnav before remove importants

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <a href="index.html" id="logo"></a>
     </header>
 
-    <section id='cssmenu'>
+    <section id='responsiveTopNav'>
         <nav class="topNav">
             <ul class="clearfix">
                 <li>
@@ -33,7 +33,8 @@
             </ul>
         </nav>
     </section>
-    <nav id="topNav">
+    <section id="topNav">
+    <nav class="topNav">
         <ul>
             <li><a href="#">שאלות ותשובות</a></li>
             <li><a href="conatctForm.html">צרו קשר</a></li>
@@ -46,6 +47,7 @@
         </ul>
     </nav>
     <div class="clear"></div>
+    </section>
     <main>
         <marquee id="tickerText">זה טקסט הטיקר. הטיקר מופיע      כאן בעמוד הבית בלבד, ויש בו תוכן אודות חידושים, אירועים</marquee>
         <section id="slideshow">
