--- a/conatctForm.html
+++ b/conatctForm.html
@@ -10,7 +10,8 @@
     <header>
         <a href="index.html" id="logo"></a>
     </header>
-    <nav id="topNav">
+    <section id="topNav">
+    <nav class="topNav">
         <ul id="topNavCFormHover">
             <li><a href="#">שאלות ותשובות</a></li>
             <li><a href="conatctForm.html" id="orangeLi">צרו קשר</a></li>
@@ -23,6 +24,7 @@
         </ul>
     </nav>
     <div class="clear"></div>
+        </section>
     <main id="contentMainContactForm">
         <nav id="contactNav">
             <ul>
