--- a/vacuumCookingMethodArticle.html
+++ b/vacuumCookingMethodArticle.html
@@ -12,7 +12,8 @@
     <header>
         <a href="index.html" id="logo"></a>
     </header>
-    <nav id="topNav">
+    <section id="topNav">
+    <nav class="topNav">
         <ul>
             <li><a href="#">שאלות ותשובות</a></li>
             <li><a href="conatctForm.html">צרו קשר</a></li>
@@ -25,6 +26,7 @@
         </ul>
     </nav>
     <div class="clear"></div>
+        </section>
     <main id="contentMainVaccumArticle">
         <nav class="mainNav">
             <ul>
