--- a/fullRiceRecipe.html
+++ b/fullRiceRecipe.html
@@ -14,7 +14,8 @@
     <header>
         <a href="index.html" id="logo"></a>
     </header>
-    <nav id="topNav">
+    <section id="topNav">
+    <nav class="topNav">
         <ul id="topNavVWHover">
             <li><a href="#">שאלות ותשובות</a></li>
             <li><a href="conatctForm.html">צרו קשר</a></li>
@@ -27,6 +28,7 @@
         </ul>
     </nav>
     <div class="clear"></div>
+        </section>
     <main class="contentMainRecipesArticle">
         <nav class="mainNav">
             <ul id="mainNavVMHover">
