--- a/systemArticles.html
+++ b/systemArticles.html
@@ -10,7 +10,8 @@
     <header>
         <a href="index.html" id="logo"></a>
     </header>
-    <nav id="topNav">
+    <section id="topNav">
+    <nav class="topNav">
         <ul>
             <li><a href="#">שאלות ותשובות</a></li>
             <li class="navBorder"><a href="conatctForm.html">צרו קשר</a></li>
@@ -23,6 +24,7 @@
         </ul>
     </nav>
     <div class="clear"></div>
+        </section>
     <main id="contentMain">
         <nav class="mainNav">
             <ul>
